--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+<script
+src='//in.fw-cdn.com/30601429/327532.js'
+chat='true'>
+</script>
 
 <head>
     <meta charset="utf-8">
